--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -21,7 +21,7 @@
   /*
     Theme Background
   */
-  --theme-background-image: url(https://i.imgur.com/j1Z6HVc.jpg);
+  --theme-background-image: url(https://i.postimg.cc/85Td4YGj/navia-genshin.png);
 
   /*
     Main Theme Color
