--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -36,7 +36,7 @@
   /*
     Home Icon Image
   */
-  --home-icon-image: url(https://i.imgur.com/63g6Em8.jpg);
+  --home-icon-image: url(https://i.postimg.cc/ydp0T6gs/Fragrant-Fantasy-Navia-Icon-1.png);
 
   /*
     Change your friends icon image position
