--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -21,7 +21,7 @@
   /*
     Theme Background
   */
-  --theme-background-image: url(https://i.postimg.cc/pdxbQK0q/navia-genshin2.png);
+  --theme-background-image: url(https://i.postimg.cc/50LWbYqV/kendrick2.jpg);
 
   /*
     Main Theme Color
